# bueze-mittagstisch-notifier

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  tasks.py
.github/support-scripts/: assert_version_raised.py
.github/workflows/: build_and_push_docker_image.yml  check_version_raise.yml  test_pull_request.yml
bueze-mittagstisch-notifier/: config.py  main.py
bueze_mittagstisch_notifier/: config.py  main.py  utils.py
bueze_mittagstisch_notifier/adapter/: bueze_mittagstisch.py
bueze_mittagstisch_notifier/adapters/: bueze.py
bueze_mittagstisch_notifier/notifier/: telegram_notifier.py
bueze_mittagstisch_notifier/provider/: mittagstisch_menu.py
bueze_mittagstisch_notifier/scheduler/: menu_check_scheduler.py  scheduler.py
bueze_mittagstisch_notifier/storage/: filenames.py  menu_file_data.py
development/: example.env
tests/: conftest.py  pytest.env
tests/adapter/: test_bueze_mittagstisch.py
tests/notifier/: test_telegram_notifier.py
tests/scheduler/: test_menu_check_scheduler.py  test_scheduler.py
tests/storage/: test_filenames.py  test_menu_file_data.py
