[project]
name = "bueze-mittagstisch-notifier"
version = "0.6.0"
description = "Notifications of the weekly BüZe Mittagstisch menu"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "httpx==0.28.*",
    "pydantic==2.11.*",
    "pydantic-settings==2.10.*",
    "beautifulsoup4>=4.13.0",
    "python-telegram-bot==22.*"
]

[dependency-groups]
dev = [
    "pytest==8.4.*",
    "coverage==7.*",
    "ruff==0.6.*",
    "mypy==1.15.*",
    "respx==0.22.*",
    "invoke>=2.2.0",
    "pytest-cov>=6.2.0",
    "pytest-socket>=0.7.0",
    "pytest-asyncio==1.1.*",
    "types-PyYAML",
    "types-pytz",
    "types-setuptools"
]

[tool.uv]
native-tls = true

[tool.ruff]
include = [
    "pyproject.toml",
    "bueze_mittagstisch_notifier/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "PD", "DTZ", "ASYNC", "S", "N", "PT"]

[tool.ruff.lint.extend-per-file-ignores]
# Allow assertions in tests
"tests/*" = ["S101"]
# Never enforce `E501` (line length violations).
"*" = ["E501"]

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.mypy]
files = ["bueze_mittagstisch_notifier", "tests"]
strict = true
implicit_reexport = true
ignore_missing_imports = true
enable_error_code = ["ignore-without-code"]
plugins = ["pydantic.mypy"]
install_types = false
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "--disable-socket --allow-unix-socket"
testpaths = "tests/"  # allows you to run `pytest` without an argument

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

